--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -92,7 +92,7 @@ body {
     text-align: center;
     margin-top: 30px;
     background: #f1f1f1;
-    border-radius: 10%;
+    border-radius: 5%;
     border-width: 2px;
     border-style: solid;
     border-color: #868a93;
@@ -121,7 +121,7 @@ body {
 .features {
     padding: 3rem 2rem;
     background-color: rgba(0, 69, 94, 0.24);
-    border-radius: 10%;
+    border-radius: 5%;
     border-width: 2px;
     border-style: solid;
     border-color: #001a61;
@@ -159,7 +159,7 @@ body {
 .products {
     padding: 2rem 2rem;
     background-color: rgba(0, 69, 94, 0.24);
-    border-radius: 10%;
+    border-radius: 5%;
     border-width: 2px;
     border-style: solid;
     border-color: #001a61;
@@ -246,7 +246,8 @@ section {
     padding: 3rem 2rem;
     text-align: center;
     background: #f1f1f1;
-    border-radius: 30% ;
+    border-radius: 5%;
+
     border-width: 2px;
     border-style: solid;
     border-color: #868a93;
@@ -256,7 +257,7 @@ section {
 .subscription__title {
     font-size: 2rem;
     margin-bottom: 1rem;
-    color: #1e3a22;
+    color: #001a61;
 }
 
 .subscription__form {
@@ -279,7 +280,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     padding: 3rem 2rem;
-    border-radius: 10%;
+    border-radius: 5%;
     border-width: 2px;
     border-style: solid;
     border-color: #868a93;
